Updated alfio-deployment env variables